@@ -1,6 +1,7 @@
 DFHack future
 
-  Is not yet known.
+  Misc improvements:
+    - exterminate: renamed from slayrace, add help message
 
 DFHack v0.34.11-r3
 
